# ConPar

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conpar/: __init__.py
